# graphgp-cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  new.ipynb  pyproject.toml
.github/workflows/: publish.yml
graphgp_cuda/: CMakeLists.txt  __init__.py  common.h  covariance.h  depth.h  linalg.h  primitive.py  query.h  refine.h  refine_nonlinear_jvp.h  refine_nonlinear_vjp.h  sort.h  tree.h  xla_bindings.cu
graphgp_cuda/cubit/: common.h
hugegp_cuda/: CMakeLists.txt  __init__.py  bindings.cu  build_tree.h  common.h  covariance.h  depth.h  ffi.py  levels.h  linalg.h  neighbors.h  neighbors_original.h  primitive.py  primitive_nonlinear.py  query.h  refine.h  refine_jvp.h  refine_linear_transpose.h  refine_nonlinear_jvp.h  refine_nonlinear_vjp.h  refine_transpose.h  refine_transpose_reduce.h  refine_vjp.h  sort.h  trace_print.py  tree.h  xla_bindings.cu
hugegp_cuda/alternate/: primitive copy.py  primitive_old.py  primitive_test.py  primitive_vjp_prim.py  query_alternating.h  refine_coarse.h  refine_cov_jvp.h  refine_indices.h  refine_jvp_fused.h  refine_transpose_reduce.h  refine_unbatched.h
hugegp_cuda/cubit/: cubit.h  cubit_zip.h
old/: build_tree.h  query.h  query_alt.h
tests/: test_cuda.py
