[project]
name = "graphgp-cuda"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]"
]

[project.optional-dependencies]
dev = [
    "jaxkd[cuda]",
    "jax[cuda12]==0.6.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "tqdm>=4.67.1",
    "pip>=25.1.1",
]

[project.urls]
Source = "https://github.com/dodgebc/graphgp-cuda"

[build-system]
requires = ["scikit-build-core", "jax"]
build-backend = "scikit_build_core.build"

[tool.ruff]
line-length = 100
exclude = ["*.ipynb", "*.cu", "*.h"]