[project]
name = "graphgp-cuda"
version = "0.0.2"
description = "Custom CUDA extension for GraphGP package."
authors = [
    {name="Benjamin Dodge", email="bendodge@stanford.edu"},
    {name="Philipp Frank", email="phfrank@stanford.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax[cuda12]"
]

[project.optional-dependencies]
dev = [
    "jax[cuda12]==0.9.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[project.urls]
Source = "https://github.com/stanford-ism/graphgp-cuda"

[build-system]
requires = ["scikit-build-core", "jax"]
build-backend = "scikit_build_core.build"

[tool.ruff]
line-length = 120
exclude = ["*.ipynb", "*.cu", "*.h"]